1.美化了界面 2.调整了出题答案随机模式，以及调整为3选项 3.调整了登录数据同步的进度条

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="back">返回</string>
     <string name="exit">退出账号</string>
     <!-- 微博 -->
-    <string name="weibo_auth_success">授权成功</string>
+    <string name="weibo_auth_success">分享成功</string>
     <string name="weibo_auth_fail">授权失败</string>
     <string name="weibo_end_session_query">重新认证需要退出当前账户，确定？</string>
     <string name="sina_weibo">新浪微博</string>
